--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4440,6 +4440,7 @@ tbody.collapse.show {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
+  box-shadow: 3px 4px 5px rgb(77, 77, 77), 0 0 10px rgb(77, 77, 77);
 }
 
 .card > hr {
