--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,14 +50,14 @@
 
 .logo {
     background-color: #4975e9;
-    /* border-right: 1px solid#6e6d6d; */
+    border-right: 1px solid#6e6d6d;
     text-align: center;
-    box-shadow: 0px -3px 20px rgb(77, 77, 77);
+    /* box-shadow: 0px -3px 20px rgb(77, 77, 77); */
 }
 
 .navbar {
-    /* border-right: 1px solid#6e6d6d; */
-    box-shadow: -3px 0px 20px rgb(77, 77, 77);
+    border-right: 1px solid#6e6d6d;
+    /* box-shadow: -3px 0px 20px rgb(77, 77, 77); */
     display: grid;
     grid-template-rows: 15% 50% 35%;
     grid-template-areas: " . damn .";
