--- a/assets/css/addusers.css
+++ b/assets/css/addusers.css
@@ -25,3 +25,15 @@ input[type=checkbox]+label:before {
 input[type=checkbox]:checked+label:before {
     background-color: aquamarine;
 }
+
+.inputext {
+    width: 50%;
+}
+
+.content {
+    margin-top: 20px;
+}
+
+.card {
+    margin-top: 50px;
+}
