--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,13 +131,43 @@
     grid-template-areas: "floatleft floatright";
 }
 
-th {
+
+/* th {
     color: #AF6964;
 }
 
 th,
 td {
     padding: 30px;
+} */
+
+.genTab {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.genTab td,
+.genTab th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+.genTab tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.genTab tr:hover {
+    background-color: #ddd;
+}
+
+.genTab th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgb(38, 15, 241);
+    color: white;
 }
 
 .basictext {
