--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,11 +98,12 @@
 
 .grid {
     display: grid;
+    grid-auto-rows: minmax(720px, auto);
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 12% 88%;
     grid-template-areas: "logo profile" "navbar stuff";
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 .stuff {
