--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,11 +8,10 @@
 }
 
 .inputext {
-    margin: 30px;
+    margin: 10px;
     border-style: hidden;
     border-bottom-style: solid;
     border-bottom-color: #556797;
-    width: 90%;
     outline: none;
 }
 
@@ -42,18 +41,6 @@
     float: right;
 }
 
-.lago {
-    height: 100px;
-    width: 100px;
-    margin-top: -9px;
-}
-
-.logo {
-    background-color: #4975e9;
-    border-right: 1px solid#6e6d6d;
-    text-align: center;
-    /* box-shadow: 0px -3px 20px rgb(77, 77, 77); */
-}
 
 .navbar {
     border-right: 1px solid#6e6d6d;
@@ -64,7 +51,7 @@
 }
 
 .profile {
-    background-color: #0C12B2;
+    background-color: #2890C1;
     box-shadow: 5px -3px 20px rgb(77, 77, 77);
 }
 
@@ -75,11 +62,15 @@
     border: 0 none;
     letter-spacing: 1px;
     text-transform: uppercase;
-    background-color: #0C12B2;
+    background-color: #2890C1;
     font-family: roboto, medium;
     border-radius: 0;
     width: 100px;
     height: 36px;
+    transition: all 0.3s ease-in-out;
+}
+.bodbut:hover{
+    background: #166BA7;
 }
 
 .nav-btn {
@@ -89,7 +80,7 @@
     border: 0 none;
     letter-spacing: 1px;
     text-transform: uppercase;
-    background-color: #0C12B2;
+    background-color: #2890C1;
     font-family: roboto, medium;
     border-radius: 4px;
     width: 181px;
@@ -97,13 +88,15 @@
     box-shadow: 1px 1px 10px rgb(77, 77, 77);
 }
 
+
 .grid {
     display: grid;
+    grid-auto-rows: minmax(720px, auto);
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 12% 88%;
     grid-template-areas: "logo profile" "navbar stuff";
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 .stuff {
@@ -120,10 +113,10 @@
     background-color: #4975e9;
 }
 
-.logingrid {
+.middlegrid {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-columns: ". made ."
+    grid-template-columns: ". middle ."
 }
 
 .topgrid {
@@ -132,13 +125,59 @@
     grid-template-areas: "floatleft floatright";
 }
 
-th {
+
+/* th {
     color: #AF6964;
 }
 
 th,
 td {
     padding: 30px;
+} */
+
+.genTab {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.genTab td,
+.genTab th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+.genTab tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.genTab tr:hover {
+    background-color: #ddd;
+}
+
+.genTab th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #2890C1;
+    color: white;
+}
+
+.basictext {
+    font-family: roboto;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    margin-top: 10px;
+}
+
+td a {
+    display: block;
 }
 
 @media only screen and (max-width: 600px) {
@@ -156,7 +195,7 @@ td {
         border: 0 none;
         letter-spacing: 1px;
         text-transform: uppercase;
-        background-color: #0C12B2;
+        background-color: #2890C1;
         font-family: roboto, medium;
         border-radius: 0;
         width: 100px;
