--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header {
     box-shadow: 0 1px 5px 2px rgb(22, 107, 167);
 }
 
-header .search-field {
+header .name-field {
     display: inline-block;
     width: 50%;
     color: #A8B1B8;
@@ -93,8 +93,8 @@ header .user-field a {
 }
 
 .logo {
-    height: 120px;
-    width: 120px;
+    height: 100px;
+    width: 135px;
     margin-left: 20%;
 }
 
