--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ header .user-field a {
     padding: 14px 16px;
     transition: 0.3s;
     font-size: 17px;
+    border-top: 0px;
 }
 
 /* Change background color of buttons on hover */
