--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,9 +107,9 @@ header .user-field a {
 #sideMenu {
     background: #2890C1;
     width: 280px;
-    height: 100vh;
+    height: 100%;
     box-shadow: 0 -3px 1px rgb(77, 77, 77);
-    position: absolute;
+    position: fixed;
     bottom: 0;
     top: 0;
     z-index: 4;
